Final project cleanup & GitHub ready

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,3 +23,19 @@ LOG_LEVEL=INFO
 # Security Settings
 SECRET_KEY=change-this-to-a-random-secret-key-in-production
 ALLOWED_HOSTS=localhost,127.0.0.1
+
+# Scanner Path Security (Optional)
+# Restrict which directories can be scanned to prevent directory traversal attacks
+# Use semicolon (;) as separator on Windows, colon (:) on Linux/Mac
+# Example Windows: ALLOWED_SCAN_ROOTS=C:\Users\YourName\Projects;D:\Code
+# Example Linux: ALLOWED_SCAN_ROOTS=/home/username/projects:/opt/repos
+# Leave empty or unset to allow scanning any accessible directory
+# ALLOWED_SCAN_ROOTS=
+
+# Scanner Timeout Configuration (seconds)
+# Adjust these values based on your project size
+# Small projects (< 1000 files): Use defaults or lower
+# Large projects (> 10000 files): Increase timeouts
+BANDIT_TIMEOUT=120
+SAFETY_TIMEOUT=60
+SEMGREP_TIMEOUT=180
